[package]
name = "rust_pcap"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[[bin]]
name = "get_stats"

[dependencies]
pcap-parser = { version = "0.14.0", features = ["data"] }
byteorder = "1.4.3"
derive_more = "0.99.17"
analyze_derive = { path = "crates/analyze_derive" }

tensorflow = "0.18.0"
