[package]
name = "rust_pcap"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[profile.release-max]
inherits = "release"
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "get_stats"

[[bin]]
name = "tensor_test"

[dependencies]
pcap-parser = { version = "0.14.0", features = ["data"] }
pcap = "0.10.1"
byteorder = "1.4.3"
derive_more = "0.99.17"
derivative = "2.2.0"
analyze_derive = { path = "crates/analyze_derive" }
rand = "0.8.5"
ron = "0.7.1"
serde = { version = "1.0.137", features = ["derive"] }
regex = "1.6.0"
nom = "7.1.1"
nom_locate = "4.0.0"
lazy_static = "1.4.0"
memmem = "0.1.1"
chrono = "0.4.22"
strum = "0.24.1"
strum_macros = "0.24.3"

tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "time", "local-time"] }

tensorflow = { version = "0.18.0" }

csv = "1.1.6"

rayon = "1.5.3"
